Finished PhonPhon hw4

--- a/phon_phon_homework04/phon_phon_homework04.tex
+++ b/phon_phon_homework04/phon_phon_homework04.tex
@@ -28,7 +28,15 @@
 \begin{document}
   \maketitle
   \begin{enumerate}
-    \item do later
+    \item
+    \begin{minipage}[t]{\linewidth}
+      \captionof{figure}{Significant date in American History with notes}
+      \label{fig:spectronotes}
+      \centering
+      \includegraphics[scale=0.075]{spectronotes.jpg}
+    \end{minipage}
+    The date being pronounced in Figure \ref{fig:spectronotes} is `August 28th, 1963' or the day Martin Luther King, Jr. gave his `I Have a Dream' speech.
+
     \item
     \regfig{[i] in \lexi{he}}{ispectrum}
     The spectral peaks of the first three formants of [i] in Figure \ref{fig:ispectrum} are 338Hz (F1), 2993Hz (F2), and 3587Hz (F3).
