--- a/nlp_homework05b/nlp_homework05b.tex
+++ b/nlp_homework05b/nlp_homework05b.tex
@@ -18,8 +18,10 @@
 
 \begin{document}
   \maketitle
-  \section{1.3 exercises}
+  \section{Page 41 exercises}
     \begin{enumerate}
-      \item 
+      \item The print out can have the number of states in memory added by inserting the \texttt{len} function to get the length of the first index of the tuple, like so:
+      \lstinputlisting[firstline=41, lastline=41]{tdh_jm.py}
+      \item ??? Basically, I'm lost from this point on and I ran out of time to read through materials to get unlost.
     \end{enumerate}
 \end{document}
