--- a/phon_phon_project/vowel_merge_LF.Rnw
+++ b/phon_phon_project/vowel_merge_LF.Rnw
@@ -44,7 +44,7 @@
 
     In this study, I aim to do such a quantative analysis using sociolinguistic interviews conducted with four individuals in early 2019.
     MAUS at the BAS web services site will be used to align transcriptions of the text, and Praat will be used to extract vowel formants.
-    Each speaker's vowel space will be analyzed using Bhattacharyya distance to determine how much overlap there is in the F1 values of their realizations of [ɑ̃] and [ɔ̃].
+    Each speaker's vowel space will be analyzed using Bhattacharyya affinity to determine how much overlap there is in the F1 values of their realizations of [ɑ̃] and [ɔ̃].
 
     This process will provide real quantitative evidence for or against the idea that these vowels are merging.
     There will, however, be limitations considering the very small sample of speakers.
